Updates Java version to 17.