@@ -54,7 +54,7 @@
     <url>https://github.com/IRCM/generate-property-names/issues</url>
   </issueManagement>
   <properties>
-    <javac.version>1.8</javac.version>
+    <javac.version>17</javac.version>
     <auto-service.version>1.1.1</auto-service.version>
     <compile-testing.version>0.21.0</compile-testing.version>
   </properties>
@@ -81,6 +81,11 @@
             <excludes>
               <exclude>ca/qc/ircm/processing/test/**/*.java</exclude>
             </excludes>
+            <argLine>
+              --add-opens jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED
+              --add-opens jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED
+              --add-opens jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED
+            </argLine>
           </configuration>
         </plugin>
         <plugin>
@@ -145,6 +150,14 @@
       <plugin>
         <groupId>com.mycila</groupId>
         <artifactId>license-maven-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>17</source>
+          <target>17</target>
+        </configuration>
       </plugin>
     </plugins>
   </build>
